Add sections structures
Added the structures of:

* Vídeo
* Sidebar
* Description
* Comments

--- a/styles.css
+++ b/styles.css
@@ -12,3 +12,5 @@
 #search-button{height: 40px;}
 #search-bar-container{width: 400px;}
 .navbar-button{height: 40px; width:40px;}
+
+.middle-container{display: flex;}
