fix navbar arrangement

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,7 @@
 #navbar{
     display: flex;
     text-align: center;
+    justify-content: space-between;
 }
 #menu-button{
     height: 40px; 
@@ -32,3 +33,7 @@
 .navbar-button{height: 40px; width:40px;}
 
 .middle-container{display: flex;}
+
+
+.first-group{display: flex;}
+.third-group{display: flex;}
