--- a/styles.css
+++ b/styles.css
@@ -8,8 +8,7 @@
     width: 40px;    
 }
 #youtube-icon{  
-    justify-content: left;  
-    width: 100px;
+    width: 90px;
     height: 40px;
     font-size:100%;
     background-color: transparent;
@@ -19,7 +18,6 @@
      border-width: 0px; 
      border-style: none; 
      margin: 3px 0px 0px; 
-     padding-right: 200px; 
      border-color: white;
 
 }
@@ -38,4 +36,5 @@
 
 
 .first-group{display: flex;}
+.second-group{display: flex;}
 .third-group{display: flex;}
