--- a/styles.css
+++ b/styles.css
@@ -1,12 +1,15 @@
-#navbar{justify-content: space-between;
+#navbar{
+    justify-content: space-between;
     display: flex;
     text-align: center;
     justify-content: space-between;
 }
+
 #menu-button{
     height: 40px; 
     width: 40px;    
 }
+
 #youtube-icon{  
     width: 90px;
     height: 40px;
