--- a/styles.css
+++ b/styles.css
@@ -1,8 +1,8 @@
 #navbar{
+    padding-top: 2%;
     justify-content: space-between;
     display: flex;
-    text-align: center;
-    justify-content: center;
+    text-align: left;
 }
 
 #menu-button{
