--- a/style.css
+++ b/style.css
@@ -195,3 +195,82 @@
     padding: 0px 10px; 
     border-color: rgb(22, 122, 198); 
 }
+
+.ul-preview-list{
+    font-size:100%;
+    background-color: transparent;
+    list-style: none outside none;
+    border-width: 0px;
+    border-style: none;
+    margin: 0px;
+    padding: 0px;
+    border-color: white;
+}
+
+.li-preview-list{
+    font-size:100%;
+    background-color: transparent;
+    position:relative;
+    border-width: 0px;
+    border-style: none;
+    margin: 0px 0px 15px;
+    padding: 0px;
+    border-color: white;
+}
+
+.div-video-desc{
+    font-size:100%;background-color: transparent; border-width: 0px; border-style: none; margin: 0px 0px 0px 181px; padding: 0px; border-color: white;
+}
+
+.a-preview {
+    font-size:100%;
+    background-color: transparent;
+    cursor:pointer;
+    position:relative;
+    overflow-x:hidden;
+    overflow-y:hidden;
+    color:rgb(51, 51, 51);
+    display:block;
+    min-height:94px;
+    text-decoration:none;
+    border-width: 0px;
+    border-style: none;
+    margin: 0px;
+    padding: 0px;
+    border-color: white;
+}
+
+.span-preview-desc{
+    direction:ltr;
+    background-color: transparent;
+    display:block;
+    line-height:1.2;
+    max-height:3.6em;
+    overflow-x:hidden;
+    overflow-y:hidden;
+    cursor:pointer;
+    color:rgb(51, 51, 51);
+    font-size:14px;
+    font-weight:500;
+    border-width: 0px; 
+    border-style: none; 
+    margin: 0px 0px 2px; 
+    padding: 0px; 
+    border-color: white;
+}
+
+.div-video-prev{
+    font-size:100%;
+    background-color: transparent; 
+    position:absolute;
+    top:0px;
+    width:168px;
+    height:94px;
+    overflow-x:hidden;
+    overflow-y:hidden;
+    border-width: 0px; 
+    border-style: none; 
+    margin: 0px 5px; 
+    padding: 0px; 
+    border-color: white;
+}
