--- a/style.css
+++ b/style.css
@@ -274,3 +274,36 @@
     padding: 0px; 
     border-color: white;
 }
+
+.button-watch-later{
+    font:normal normal normal 12px/normal 'YouTube Noto', Roboto, arial, sans-serif;
+    font-family:'YouTube Noto', Roboto, arial, sans-serif;
+    font-weight:500;
+    font-size:11px;
+    text-decoration:none;
+    white-space:nowrap;
+    word-wrap:normal;
+    line-height:normal;
+    vertical-align:middle;
+    cursor:pointer;
+    box-shadow:rgba(0, 0, 0, 0.046875) 0px 1px 0px;
+    background-color: rgb(248, 248, 248);
+    color:rgb(51, 51, 51);
+    width:22px;
+    height:22px;
+    border-top-left-radius:2px 2px;
+    border-top-right-radius:2px 2px;
+    border-bottom-right-radius:2px 2px;
+    border-bottom-left-radius:2px 2px;
+    display:none;
+    position:absolute;
+    right:-60px;
+    bottom:2px;
+    z-index:3;
+    outline: invert none 0px;
+    border-width: 1px;
+    border-style: solid;
+    margin: 0px;
+    padding: 0px;
+    border-color: rgb(211, 211, 211);
+}
