added the save label
added the save label in the button behind the video player

--- a/style.css
+++ b/style.css
@@ -35,6 +35,10 @@
     padding: 50px;
 } 
 
+#sidebar-section{
+    padding-right: 50px;
+}
+
 .search-bar {
     font-family: 'Roboto','Noto',sans-serif;
     font-size: 16px;
