--- a/style.css
+++ b/style.css
@@ -89,7 +89,10 @@
     border-color: rgb(211, 211, 211) rgb(211, 211, 211) rgb(211, 211, 211) white;
     }
 #search-bar-container{width: 400px;}
-.navbar-button{height: 40px; width:40px; margin-left: 10px;}
+.navbar-button{height: 40px; width:40px; margin: 0 10px 0 10px;}
+
+.signin-btn-container{display: flex; align-items: center;}
+
 
 #video-section{
     width: 900px;
@@ -134,6 +137,43 @@
 .third-footer-list {
     margin-top: 10px;
 }
+
+#user{
+    display: flex;
+}
+
+.profile-section {
+    display: flex;
+    justify-content: space-between;
+}
+
+.profile-thumbnail {
+    /* border-radius: 50%; */
+    margin-right: 5px;
+}
+
+.first-profile-section{
+    display: flex;
+}
+
+.follow-button {
+    font-size:100%;
+    box-sizing: border-box; 
+    -moz-box-sizing: border-box; -ms-box-sizing: border-box; display:inline;border-width: 0px; border-style: none; margin: 0px; padding: 0px; border-color: white; 
+}
+
+.profile-name {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-right: 5px;
+}
+
+h3, h4 {
+    display: flex;
+    margin: 0;
+}
+
 #menu1{
     pointer-events: none; 
     display: block; 
