--- a/style.css
+++ b/style.css
@@ -4,13 +4,16 @@
     font-family: 'Roboto';
 }
 
+body {margin-top: 0;}
+
 .container{
 }
 
 .navbar{
     display: flex;
     justify-content: space-between;
-    padding-bottom: 15px;
+    padding: 20px;
+    align-items: center;
 }
 
 .body-container{
